<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fillViewport="false"
    android:weightSum="2"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:weightSum="3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/g0"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_gravity="fill_horizontal"
            android:id="@+id/camera"
            android:padding="15dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:src="@drawable/camera"
                android:gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/camera"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/g2"
            android:gravity="center"
            android:layout_gravity="fill_horizontal"
            android:orientation="vertical"
            android:id="@+id/favorite"
            android:padding="15dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:src="@drawable/favorite_icon"
                android:paddingBottom="10dp"
                android:gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/favorite"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/g4"
            android:gravity="center"
            android:layout_gravity="fill_horizontal"
            android:orientation="vertical"
            android:id="@+id/search"
            android:padding="15dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:src="@drawable/search"
                android:paddingBottom="10dp"
                android:gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="3">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/g1"
            android:gravity="center"
            android:layout_gravity="fill_horizontal"
            android:orientation="vertical"
            android:id="@+id/map"
            android:padding="15dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:paddingBottom="10dp"
                android:src="@drawable/map"
                android:gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/map"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/g3"
            android:gravity="center"
            android:layout_gravity="fill_horizontal"
            android:orientation="vertical"
            android:id="@+id/images"
            android:padding="15dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:src="@drawable/album"
                android:gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/images"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/g5"
            android:gravity="center"
            android:layout_gravity="fill_horizontal"
            android:orientation="vertical"
            android:id="@+id/about"
            android:padding="15dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:src="@drawable/info"
                android:paddingBottom="10dp"
                android:gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>
